--- a/website/content/en/status/report-2025-04-2025-06/cfc.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/cfc.adoc
@@ -66,7 +66,7 @@ It is hoped that an increasing number of contributors will join the documentatio
 
 ==== Ports
 
-link:https://github.com/FreeBSD-Ask/QQ-Port/[QQ Port on Website] URL: link:https://github.com/FreeBSD-Ask/QQ-Port/[] +
+link:https://github.com/FreeBSD-Ask/QQ-Port/[QQ Port on GitHub] URL: link:https://github.com/FreeBSD-Ask/QQ-Port/[] +
 link:https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=287292[Bug 287292 - [NEW PORT\] net-im/qq: consider restoring QQ port due to resumed upstream development]
 URL: https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=287292[]
 
