nl/books/faq: fix a few fuzzy translations

--- a/documentation/content/nl/books/faq/_index.adoc
+++ b/documentation/content/nl/books/faq/_index.adoc
@@ -80,7 +80,7 @@ Het FreeBSD-project heeft een helder en onwrikbaar doel: het bieden van een hoog
 Het heeft als doel een veelzijdig platform te bieden, dat geschikt is voor een breed scala aan computertoepassingen, van servers en werkstations tot embedded systemen en nog veel meer. FreeBSD is ontwikkeld met een grote toewijding aan de opensource principes, resulterend in een omgeving waar de bijdragen van een wereldwijde community van ontwikkelaars het besturingssysteem vormgeven en definiëren. Deze toewijding aan kwaliteit, vrijheid en betrouwbaarheid is wat FreeBSD onderscheidt en wat het doorlopende succes als opensource project verklaard.
 
 [[FreeBSD-usecases]]
-=== What use cases is FreeBSD good for?
+=== Voor welke toepassingen is FreeBSD geschikt?
 
 FreeBSD is een veelzijdig besturingssysteem dat uitblinkt in verschillende toepassingsgebieden. Het is in het bijzonder geschikt voor servers. De stabiliteit en prestaties van FreeBSD maken het een populaire keuze voor webhosting, databases en netwerktoepassingen. De robuuste beveiligingsfuncties maken het ook een sterke kandidaat voor firewalls en beveiligingstoepassingen. Naast het gebruik als server kan FreeBSD ook op maat worden ingesteld voor gespecialiseerde omgevingen, zoals bijvoorbeeld embedded systemen en game consoles. De aanpasbaarheid, betrouwbaarheid en het opensource karakter maken FreeBSD een aantrekkelijke keuze voor een breed scala aan computertoepassingen.
 
