--- a/documentation/content/nl/books/faq/_index.po
+++ b/documentation/content/nl/books/faq/_index.po
@@ -3,12 +3,13 @@
 # This file is distributed under the same license as the FreeBSD Documentation package.
 # René Ladan <rene0@freedom.nl>, 2025.
 # Tammo-Jan Kamminga <tammo-jan@freezzz.eu>, 2025, 2026.
+# René Ladan <rene@FreeBSD.org>, 2026.
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2026-02-22 15:58+0000\n"
-"PO-Revision-Date: 2026-02-22 16:18+0000\n"
-"Last-Translator: Tammo-Jan Kamminga <tammo-jan@freezzz.eu>\n"
+"PO-Revision-Date: 2026-02-24 04:45+0000\n"
+"Last-Translator: René Ladan <rene@FreeBSD.org>\n"
 "Language-Team: Dutch <https://translate-dev.freebsd.org/projects/"
 "documentation/booksfaq_index/nl_NL/>\n"
 "Language: nl_NL\n"
@@ -179,8 +180,7 @@ msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/books/faq/_index.adoc:89
-#, fuzzy, no-wrap
-#| msgid "What uses cases is FreeBSD good for?"
+#, no-wrap
 msgid "What use cases is FreeBSD good for?"
 msgstr "Voor welke toepassingen is FreeBSD geschikt?"
 
