nl/articles/leap-seconds: update translation

--- a/documentation/content/nl/articles/leap-seconds/_index.adoc
+++ b/documentation/content/nl/articles/leap-seconds/_index.adoc
@@ -53,7 +53,7 @@ Standaardgedrag voor schrikkelseconden is beschreven in https://datatracker.ietf
 [[leapseconds-posix]]
 == De standaardomgang met schrikkelseconden op FreeBSD
 
-De eenvoudigste manier om met schrikkelseconden om te gaan is met de tijdregels van POSIX die FreeBSD standaard gebruikt, gecombineerd met extref:{handbook}[NTP, network-ntp]. Wanneer man:ntpd[8] draait en de tijd is gesynchroniseerd met bovenliggende NTP-servers welke correct met schrikkelseconden omgaan, dan zal de schrikkelseconde ervoor zorgen dat het systeem automatisch de laatste seconde van de dag herhaalt. Er zijn geen verdere aanpassingen nodig.
+De eenvoudigste manier om met schrikkelseconden om te gaan is met de tijdregels van POSIX die FreeBSD standaard gebruikt, gecombineerd met extref:{handbook}netwerk-servers[NTP, network-ntp]. Wanneer man:ntpd[8] draait en de tijd is gesynchroniseerd met bovenliggende NTP-servers welke correct met schrikkelseconden omgaan, dan zal de schrikkelseconde ervoor zorgen dat het systeem automatisch de laatste seconde van de dag herhaalt. Er zijn geen verdere aanpassingen nodig.
 
 Als de bovenliggende NTP-servers onjuist met schrikkelseconden omgaan, zal man:ntpd[8] de tijd met één seconde vooruitzetten nadat de afdwalende bovenliggende server het heeft opgemerkt en zichzelf heeft aangepast.
 
