--- a/documentation/content/nl/articles/leap-seconds/_index.po
+++ b/documentation/content/nl/articles/leap-seconds/_index.po
@@ -3,12 +3,13 @@
 # This file is distributed under the same license as the FreeBSD Documentation package.
 # Danilo G. Baio <dbaio@FreeBSD.org>, 2021.
 # René Ladan <rene0@freedom.nl>, 2025.
+# René Ladan <rene@FreeBSD.org>, 2026.
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2022-02-01 09:21-0300\n"
-"PO-Revision-Date: 2025-06-24 21:10+0000\n"
-"Last-Translator: René Ladan <rene0@freedom.nl>\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2026-02-24 04:45+0000\n"
+"Last-Translator: René Ladan <rene@FreeBSD.org>\n"
 "Language-Team: Dutch <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesleap-seconds_index/nl_NL/>\n"
 "Language: nl_NL\n"
@@ -73,8 +74,8 @@ msgid ""
 "txt[Bulletin C]."
 msgstr ""
 "Schrikkelseconden worden aangekondigd door https://www.iers.org/IERS/EN/Home/"
-"home_node.html[IERS] op https://datacenter.iers.org/data/latestVersion/"
-"16_BULLETIN_C16.txt[Bulletin C]."
+"home_node.html[IERS] op https://datacenter.iers.org/data/"
+"latestVersion/16_BULLETIN_C16.txt[Bulletin C]."
 
 #. type: Plain text
 #: documentation/content/en/articles/leap-seconds/_index.adoc:55
@@ -95,19 +96,19 @@ msgstr "De standaardomgang met schrikkelseconden op FreeBSD"
 #: documentation/content/en/articles/leap-seconds/_index.adoc:62
 msgid ""
 "The easiest way to handle leap seconds is with the POSIX time rules FreeBSD "
-"uses by default, combined with extref:{handbook}[NTP, network-ntp].  When "
-"man:ntpd[8] is running and the time is synchronized with upstream NTP "
-"servers that handle leap seconds correctly, the leap second will cause the "
-"system time to automatically repeat the last second of the day.  No other "
-"adjustments are necessary."
+"uses by default, combined with extref:{handbook}network-servers[NTP, network-"
+"ntp].  When man:ntpd[8] is running and the time is synchronized with "
+"upstream NTP servers that handle leap seconds correctly, the leap second "
+"will cause the system time to automatically repeat the last second of the "
+"day.  No other adjustments are necessary."
 msgstr ""
 "De eenvoudigste manier om met schrikkelseconden om te gaan is met de "
 "tijdregels van POSIX die FreeBSD standaard gebruikt, gecombineerd met "
-"extref:{handbook}[NTP, network-ntp]. Wanneer man:ntpd[8] draait en de tijd "
-"is gesynchroniseerd met bovenliggende NTP-servers welke correct met "
-"schrikkelseconden omgaan, dan zal de schrikkelseconde ervoor zorgen dat het "
-"systeem automatisch de laatste seconde van de dag herhaalt. Er zijn geen "
-"verdere aanpassingen nodig."
+"extref:{handbook}netwerk-servers[NTP, network-ntp]. Wanneer man:ntpd[8] "
+"draait en de tijd is gesynchroniseerd met bovenliggende NTP-servers welke "
+"correct met schrikkelseconden omgaan, dan zal de schrikkelseconde ervoor "
+"zorgen dat het systeem automatisch de laatste seconde van de dag herhaalt. "
+"Er zijn geen verdere aanpassingen nodig."
 
 #. type: Plain text
 #: documentation/content/en/articles/leap-seconds/_index.adoc:64
