website/ru: Update releases/15.0R/errata.adoc
Sync to EN 005bf1c59c120936048675bffc89c5f649cc7c99

--- a/website/content/ru/releases/15.0R/errata.adoc
+++ b/website/content/ru/releases/15.0R/errata.adoc
@@ -48,6 +48,7 @@ sidenav: download
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-26:01.openssl.asc[FreeBSD-SA-26:01.openssl] |27 января 2026 |Несколько уязвимостей в OpenSSL
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-26:03.blocklistd.asc[FreeBSD-SA-26:03.blocklistd] |10 февраля 2026 |Утечка сетевых соединений в blocklistd(8)
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-26:04.arm64.asc[FreeBSD-EN-26:04.arm64] |10 февраля 2026 |Аварийное завершение работы ядра при сохранении образа процесса на платформе arm64
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-26:05.route.asc[FreeBSD-SA-26:05.route] |24 февраля 2026 |Локальный отказ в обслуживании (DoS) и возможность повышения полномочий через сокеты маршрутизации
 |===
 
 [[errata]]
@@ -94,5 +95,5 @@ sidenav: download
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (11.02.2026): 5e7c1270fac8e5b7f6f877cd9711f07cd5d0958a
+// Original EN revision (25.02.2026): 005bf1c59c120936048675bffc89c5f649cc7c99
 //
