Articles/Status: Update cron job example
While here, change a 'cronjob' into 'cron job' for consistency.

--- a/documentation/content/en/articles/freebsd-status-report-process/_index.adoc
+++ b/documentation/content/en/articles/freebsd-status-report-process/_index.adoc
@@ -212,15 +212,16 @@ Calls for status reports are sent to the following recipients:
 
 The easiest way to send calls for status reports is to use the link:https://cgit.freebsd.org/doc/tree/tools/sendcalls/sendcalls[[.filename]#sendcalls# perl script] in the [.filename]#tools/sendcalls# directory of the doc git repository.
 The script automatically sends calls to all intended recipients.
-It can also be used through a cron job, for example:
+It can also be used through cron jobs, for example:
 
 ....
-0      0       1,15,24 3,6,9,12        *       cd ~/doc/tools/sendcalls && git pull && ./sendcalls -s 'Lorenzo Salvadore'
+0      0       1,15,31 3,12        *       cd ~/doc/tools/sendcalls && git pull && ./sendcalls -s 'Lorenzo Salvadore'
+0      0       1,15,30 6,9        *       cd ~/doc/tools/sendcalls && git pull && ./sendcalls -s 'Lorenzo Salvadore'
 ....
 
 [IMPORTANT]
 ====
-If you are in charge of sending calls for status reports and you are indeed using a cron job, please run it on freefall and sign it with your name so that it is possible to infer who has configured the cronjob, in case something goes wrong.
+If you are in charge of sending calls for status reports and you are indeed using a cron job, please run it on freefall and sign it with your name so that it is possible to infer who has configured the cron job, in case something goes wrong.
 Also please update the example above with your name, as an additional safety measure.
 ====
 
