--- a/documentation/content/en/books/handbook/kernelconfig/_index.adoc
+++ b/documentation/content/en/books/handbook/kernelconfig/_index.adoc
@@ -204,7 +204,7 @@ The format of the kernel configuration file is simple.
 Each line contains a keyword that represents a device or subsystem, an argument, and a brief description.
 Any text after a `+#+` is considered a comment and ignored.
 To remove kernel support for a device or subsystem, put a `+#+` at the beginning of the line representing that device or subsystem.
-Do not add or remove a `+#+` for any line that is not understand.
+Refrain from adding or removing a `+#+` for any line you do not fully understand.
 
 [WARNING]
 ====
