--- a/website/content/en/releases/14.4R/signatures.adoc
+++ b/website/content/en/releases/14.4R/signatures.adoc
@@ -4,11 +4,11 @@ sidenav: download
 ---
 
 :localRel: 14.4
-:localBranchName: BETA3
+:localBranchName: RC1
 :localBranchStable: stable/14
 :localBranchReleng: releng/14.4
-:localRelSha256: ../checksums/CHECKSUM.SHA256-FreeBSD-14.4-BETA3
-:localRelSha512: ../checksums/CHECKSUM.SHA512-FreeBSD-14.4-BETA3
+:localRelSha256: ../checksums/CHECKSUM.SHA256-FreeBSD-14.4-RC1
+:localRelSha512: ../checksums/CHECKSUM.SHA512-FreeBSD-14.4-RC1
 
 = FreeBSD {localRel}-{localBranchName} Release Checksum Signatures
 
